--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,3 @@
 VITE_MODE = 'production'
-
-PROXY_PREFIX = '/baisc-information'
-
-BASE_PREFIX = '/cloud-sso'
-
-DR_APP_API_URL = 生产环境地址
+VITE_BASE_URL = '/api'
+VITE_PROXY_TARGET = ''
