--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,3 @@
 VITE_MODE = 'test'
-
-BASE_PREFIX = '/cloud-sso'
-
-PROXY_PREFIX = '/baisc-information'
-
-IS_TEST = true
-
-DR_APP_API_URL = 测试环境地址
+VITE_BASE_URL = '/api'
+VITE_PROXY_TARGET = ''
