--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
 VITE_MODE = 'development'
-PROXY_PREFIX = '/singOn'
-
-DR_APP_API_URL = 'http://192.168.1.112:8080'
+VITE_BASE_URL = '/api'
+VITE_PROXY_TARGET = 'http://localhost:3000'
